# NarChesser

./: .gitignore  CMakeLists.txt  LICENSE  NeuralNetwork.ipynb  README.md  network.py  params.txt
include/: chess.hpp  manipulators.hpp  planes.hpp
include/model/: encoder.hpp  model.hpp
include/search/: constants.hpp  node.hpp  play_policy_map.hpp  search.hpp  threadpool.hpp  transposition_table.hpp
include/selfplay/: selfplay.hpp
include/utils/: functions.hpp
model/: model.py  policy_attention_map.py
nnet_py/: NeuralNetwork.ipynb  policy_attention_map.py  transformer_net.py
selfplay_training/: training_parser.cpp  training_planes.hpp
src/: board.cpp  chess.hpp  config.cpp  config.hpp  functions.hpp  manipulators.hpp  planes.cpp  planes.hpp
src/model/: encoder.cpp  model.cpp
src/nnet/: encoder.cpp  encoder.hpp  nnet.cpp  nnet.hpp
src/search/: constants.cpp  constants.hpp  main.cpp  node.cpp  node.hpp  play_policy_map.cpp  play_policy_map.hpp  runner.cpp  search.cpp  search.hpp  threadpool.hpp  transposition_table.hpp
src/selfplay/: selfplay.cpp  selfplay.hpp
src/utils/: functions.hpp  random.hpp
training/: train_policy_map.hpp  training_parser.cpp  training_planes.hpp
